# PubDesk

./: .gitignore  ANALISIS.md  README.md  package.json
.github/workflows/: release.yml
Excel/: Alur Naskah.xlsx  DATABASE PENULIS INDONESIA.xlsx  Database penerbit .xlsx  Link Buku shopee .xlsx  Link Google Scholar.xlsx  Naskah Hana.xlsx  PENGAJUAN ISBN QRCBN QRSBN HAKI .xlsx  UPLOAD PLAYBOOK.xlsx
apps/pub-admin/src-tauri/: Cargo.toml  tauri.conf.json
apps/pub-admin/src-tauri/binaries/: README.md
apps/pub-admin/src-tauri/src/: lib.rs  main.rs
apps/pub-admin/src-tauri/src/commands/: session.rs
apps/pub-admin/src-tauri/src/db/: mod.rs  sample_data.rs  schema.rs  workflow.rs  wrapper.rs
apps/pub-admin/src-tauri/src/indexing/: pipeline.rs
apps/pub-admin/src-tauri/src/sync/: engine.rs  network.rs  types.rs
apps/pub-files/: package.json
apps/pub-ops/: package.json
docs/: Plan Berdasarkan Data Excel.md  google-apps-script-api.md
docs/google-apps-script/: code.js
scripts/: test_db_concurrency.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  watcher.rs
src/assets/: kbm_profiles_backup.json
src/contexts/: AppContext.tsx  AuthContext.tsx  CrmContext.tsx  DataMasterContext.tsx  FileContext.tsx  InvoiceContext.tsx
src/data/: invoiceTemplates.ts
src/hooks/: useUIState.ts
src/services/: googleAppsScript.ts
src/types/: app.types.ts  book.types.ts  contact.types.ts  crm.types.ts  data-master.types.ts  file.types.ts  index.ts  invoice.types.ts  service.types.ts
src/ui/: Badge.tsx  (+5 more)
(+236 files in other folders)
