[package]
name = "pubhub-admin"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pubhub_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
pubhub-db-shared = { path = "../../../packages/shared-db-rust" }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
notify = "6.1.1"
zip = "0.6"
calamine = "0.24"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
base64 = "0.22"
async-trait = "0.1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
hkdf = "0.12"
rand = "0.8"
hex = "0.4"
zeroize = "1"
flate2 = "1.0"



[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
